--- a/scss/pages/_course.scss
+++ b/scss/pages/_course.scss
@@ -206,3 +206,17 @@ body[data-theme='cbe'][data-role='user'] {
   }
 
 }
+
+body[data-theme='cbe'][data-role='user'].path-mod {
+  #page-content.course {
+    #region-main-box {
+      #left-menu-course {
+        #course-left-section {
+          @media (min-width: 1200px) {
+            padding-right: 15px !important;
+          }
+        }
+      }
+    }
+  }
+}
