--- a/templates/navbar/navbar.mustache
+++ b/templates/navbar/navbar.mustache
@@ -97,6 +97,9 @@
     </ul>
 
 </nav>
+<nav id="nav-mobile">
+    {{{ navbar_header_course }}}
+</nav>
 {{# can_create_courses }}
     {{> theme_cbe/modals/dashboard_createcourse }}
 {{/ can_create_courses }}
