--- a/scss/components/_modtresipuntvideo.scss
+++ b/scss/components/_modtresipuntvideo.scss
@@ -16,6 +16,9 @@
   .resourcecontent {
     margin: 60px 60px 30px;
     border: 4px solid #929292;
+    @media (max-width: 900px) {
+      margin: 0 !important;
+    }
     .mediaplugin {
       margin: 0;
       > video.video-js {
@@ -183,5 +186,8 @@
 #page-course-view-topics[data-theme='cbe'][data-role="user"] .activity.tresipuntvideo {
   .resourcecontent {
     margin: 0 60px 22px !important;
+    @media (max-width: 900px) {
+      margin: 0 0 22px !important;
+    }
   }
 }
