--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -221,13 +221,23 @@ body[data-theme='cbe'][data-role="user"] {
           margin-right: 0;
           margin-left: 5px;
           @media (max-width: 600px) {
-            top: 0;
+            top: -14px;
+            font-size: 16px;
+            width: 30px;
+            height: 30px;
+            right: -3px;
+            background-color: $grey-medium2;
           }
         }
       }
       button.edit-module.action {
         @media (max-width: 600px) {
-          top: -10px
+          top: -10px;
+          font-size: 16px;
+          width: 30px;
+          height: 30px;
+          right: -3px;
+          background-color: $grey-medium2;
         }
       }
     }
@@ -356,6 +366,9 @@ body[data-theme='cbe'][data-role="user"] {
           width: 38px;
           border-radius: 19px;
           margin-left: 30px;
+          @media (max-width: 500px) {
+            margin-left: 10px;
+          }
         }
         input.comment {
           margin-left: 42px;
@@ -364,7 +377,13 @@ body[data-theme='cbe'][data-role="user"] {
           border: 1px solid $grey-border;
           width: 100%;
           margin-right: 20px;
-          padding: 16px 20px;
+          padding: 16px 52px 16px 20px;
+          @media (max-width: 500px) {
+            margin-left: 6px;
+            font-size: 13px;
+            margin-right: 12px;
+          }
+
         }
         button.send {
           border: none;
