--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -5,21 +5,30 @@ body[data-theme='cbe'][data-role='user'] {
     .header-board {
       background-position: center;
       background-size: cover;
-      height: 250px;
+      min-height: 250px;
       color: white;
       .degraded {
         background: rgb(0,0,0);
         background: linear-gradient(180deg,rgba(0,0,0,0.8) 10%,rgba(0,0,0,0) 100%);
+        min-height: 200px;
         .title-box {
           padding: 24px;
           h3.category {
             font-size: 23px;
             margin-bottom: 4px;
+            @media (max-width: 500px) {
+              margin-right: 35px;
+              font-size: 18px;
+            }
           }
           h2.coursename {
             font-size: 44px;
             font-weight: 600;
             letter-spacing: 1px;
+            @media (max-width: 500px) {
+              font-size: 24px;
+              margin-right: 35px;
+            }
           }
         }
         ul.teachers-box {
@@ -31,12 +40,24 @@ body[data-theme='cbe'][data-role='user'] {
           width: 100%;
           overflow-x: scroll;
           justify-content: flex-end;
+          scrollbar-color: $grey-border transparent;
+          scrollbar-width: thin;
+          @media (max-width: 500px) {
+            bottom: -10px;
+          }
           .picture-teacher {
             height: 70px;
             width: 70px;
             border-radius: 35px;
             border: 3px solid white;
             margin-right: 20px;
+            @media (max-width: 500px) {
+              height: 40px;
+              width: 40px;
+              border-radius: 35px;
+              border: 2px solid #fff;
+              margin-right: 10px;
+            }
           }
           .online {
             height: 14px;
@@ -47,6 +68,9 @@ body[data-theme='cbe'][data-role='user'] {
             position: absolute;
             right: 26px;
             bottom: 1px;
+            @media (max-width: 500px) {
+              right: 7px;
+            }
             &.connected {
               background-color: #0f9a0f;
             }
@@ -125,6 +149,10 @@ body[data-theme='cbe'][data-role='user'] {
       .text-action {
         margin-left: 15px;
         margin-right: 25px;
+        @media (max-width: 500px) {
+          margin-left: 0;
+          margin-right: 70px;
+        }
       }
     }
 
