--- a/scss/pages/_module.scss
+++ b/scss/pages/_module.scss
@@ -7,12 +7,18 @@ body[data-theme='cbe'][data-role='user'] {
       border: 1px solid $border-color;
       padding: 30px;
       margin-bottom: 15px;
+      @media (max-width: 600px) {
+        padding: 30px 10px;
+      }
       div[role="main"] {
         >h2,>h3 {
           font-size: 28px;
           font-family: $fontbold;
           margin: 0 0 24px 70px;
           position: relative;
+          @media (max-width: 600px) {
+            font-size: 22px;
+          }
           &:after {
             content: "";
             background-color: $primary-color;
