style responsive and assign submission

--- a/templates/columns2/columns2_course.mustache
+++ b/templates/columns2/columns2_course.mustache
@@ -118,4 +118,9 @@ require(['theme_boost/drawer'], function(drawer) {
     drawer.init();
     M.util.js_complete('theme_boost/drawer');
 });
+
+require(['theme_cbe/viewassign'], function(viewassign) {
+    viewassign.initViewAssign();
+});
+
 {{/js}}
