--- a/scss/components/_assignsubmission_tipnc.scss
+++ b/scss/components/_assignsubmission_tipnc.scss
@@ -1,7 +1,26 @@
 div[data-region="assignsubmission_tipnc"] {
+
+  .btn-primary {
+    background-color: #5F0091;
+    color: #FFF;
+    border-color: #5F0091;
+    z-index: 200 !important;
+    position: relative;
+  }
+
+  .hide_header {
+    background-color: white;
+    height: 76px;
+    position: relative;
+    top: -76px;
+    z-index: 10;
+  }
+
   iframe.tipnc-iframe {
     height: 600px;
     width: 100%;
+    position: relative;
+    top: -150px;
   }
 }
 
@@ -10,5 +29,29 @@ body[data-theme="cbe"][data-role="user"]#page-mod-assign-editsubmission {
     width: 100%;
   }
 }
+
+body[data-theme="cbe"][data-role="user"]#page-mod-assign-view {
+  #page section[data-region="module"] .submissionstatustable {
+    h3 {
+      display: none;
+    }
+    .submissionsummarytable {
+      display: none;
+    }
+    .submstatusresponsive {
+      h4.header {
+        font-family: $fontbold;
+        font-size: 16px;
+        margin-bottom: 0;
+      }
+      p.value {
+        color: grey;
+        padding-left: 10px;
+        padding-top: 4px;
+      }
+    }
+  }
+}
+
 
 
