--- a/templates/sections/course_left_section_component.mustache
+++ b/templates/sections/course_left_section_component.mustache
@@ -1,6 +1,6 @@
 <div id="course-left-section" class="row">
     {{# sections }}
-    <div class="col-md-6 col-lg-6 col-xl-12 pl-0 p-xl-0">
+    <div class="col-12 pl-0 pr-0 p-xl-0">
         <div class="menu-card">
             {{{ . }}}
         </div>
