--- a/scss/components/_assignsubmission_tipnc.scss
+++ b/scss/components/_assignsubmission_tipnc.scss
@@ -1,9 +1,9 @@
 div[data-region="assignsubmission_tipnc"] {
 
   .btn-primary {
-    background-color: #5F0091;
-    color: #FFF;
-    border-color: #5F0091;
+    background-color: $primary-color;
+    color: $secondary-color;
+    border-color: $primary-color;
     z-index: 200 !important;
     position: relative;
   }
