--- a/templates/sections/course_left_section_menu_component.mustache
+++ b/templates/sections/course_left_section_menu_component.mustache
@@ -1,51 +1,69 @@
-{{# title }}
-<h3 class="title">{{ title }}</h3>
-{{/ title }}
-<ul class="menu-left">
-    <li class="link">
-        <a href="{{ links.resource }}">
-            <i class="fa fa-file-o" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_resources, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    <li class="link">
-        <a href="{{ links.vclasses.href }}" {{# links.vclasses.blank }} target="_blank"{{/ links.vclasses.blank }}>
-            <i class="fa fa-video-camera" aria-hidden="true"></i>
-            <span class="text">{{ links.vclasses.name }}</span>
-        </a>
-    </li>
-    <li class="link">
-        <a href="{{ links.grades }}">
-            <i class="fa fa-pencil" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_grades, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    <li class="link">
-        <a href="{{ links.participants }}">
-            <i class="fa fa-users" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_participants, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    {{# is_teacher }}
-    <li class="link">
-        <a href="{{ links.groups }}">
-            <i class="fa fa-users" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_groups, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    {{/ is_teacher }}
-    <li class="link">
-        <a href="{{ links.calendar }}">
-            <i class="fa fa-calendar" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_calendar, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    {{# links.settings }}
-    <li class="link">
-        <a href="{{ links.settings }}">
-            <i class="fa fa-wrench" aria-hidden="true"></i>
-            <span class="text">{{# str }} course_left_settings, theme_cbe {{/ str }}</span>
-        </a>
-    </li>
-    {{/ links.settings }}
-</ul>
+<div id="course_left_section_menu" data-region="section_menu">
+    {{# title }}
+        <h3 class="title">
+            {{ title }}
+            <span class="expand-menu" data-action="expand">
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+            <span class="contract-menu" data-action="contract">
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+            </span>
+        </h3>
+    {{/ title }}
+    <ul class="menu-left" data-region="expand">
+        <li class="link">
+            <a href="{{ links.resource }}">
+                <i class="fa fa-file-o" aria-hidden="true"></i>
+                <span class="text">{{# str }} course_left_resources, theme_cbe {{/ str }}</span>
+            </a>
+        </li>
+        <li class="link">
+            <a href="{{ links.vclasses.href }}" {{# links.vclasses.blank }} target="_blank"{{/ links.vclasses.blank }}>
+                <i class="fa fa-video-camera" aria-hidden="true"></i>
+                <span class="text">{{ links.vclasses.name }}</span>
+            </a>
+        </li>
+        <li class="link">
+            <a href="{{ links.grades }}">
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+                <span class="text">{{# str }} course_left_grades, theme_cbe {{/ str }}</span>
+            </a>
+        </li>
+        <li class="link">
+            <a href="{{ links.participants }}">
+                <i class="fa fa-users" aria-hidden="true"></i>
+                <span class="text">{{# str }} course_left_participants, theme_cbe {{/ str }}</span>
+            </a>
+        </li>
+        {{# is_teacher }}
+            <li class="link">
+                <a href="{{ links.groups }}">
+                    <i class="fa fa-users" aria-hidden="true"></i>
+                    <span class="text">{{# str }} course_left_groups, theme_cbe {{/ str }}</span>
+                </a>
+            </li>
+        {{/ is_teacher }}
+        <li class="link">
+            <a href="{{ links.calendar }}">
+                <i class="fa fa-calendar" aria-hidden="true"></i>
+                <span class="text">{{# str }} course_left_calendar, theme_cbe {{/ str }}</span>
+            </a>
+        </li>
+        {{# links.settings }}
+            <li class="link">
+                <a href="{{ links.settings }}">
+                    <i class="fa fa-wrench" aria-hidden="true"></i>
+                    <span class="text">{{# str }} course_left_settings, theme_cbe {{/ str }}</span>
+                </a>
+            </li>
+        {{/ links.settings }}
+    </ul>
+</div>
+
+{{#js}}
+
+    require(['theme_cbe/menuexpand'], function(menuexpand) {
+        menuexpand.initMenuExpand('[data-region="section_menu"]');
+    });
+
+{{/js}}
