--- a/templates/sections/course_left_section_pending_tasks_component.mustache
+++ b/templates/sections/course_left_section_pending_tasks_component.mustache
@@ -1,18 +1,36 @@
-{{# title }}
-<h3 class="title">{{ title }}</h3>
-{{/ title }}
-<ul class="pending-taks">
-    {{# pending_tasks }}
-    <li class="task">
-        <span class="icon {{ modname }}"></span>
-        <div class="data">
-            <a class="text" href="{{ view_href }}">{{ name }}</a>
-            <div class="deadline">{{# str }} deadline, theme_cbe {{/ str }}: {{ deadline }}</div>
-        </div>
-    </li>
-    {{/ pending_tasks }}
-    {{^ has_pending_tasks }}
-        <p>{{# str }} pending_tasks_not, theme_cbe {{/ str }}</p>
-    {{/has_pending_tasks}}
+<div id="course_left_section_pending_tasks" data-region="pending_tasks">
+    {{# title }}
+        <h3 class="title">
+            {{ title }}
+            <span class="expand-menu" data-action="expand">
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+            <span class="contract-menu" data-action="contract">
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+            </span>
+        </h3>
+    {{/ title }}
+    <ul class="pending-taks" data-region="expand">
+        {{# pending_tasks }}
+            <li class="task">
+                <span class="icon {{ modname }}"></span>
+                <div class="data">
+                    <a class="text" href="{{ view_href }}">{{ name }}</a>
+                    <div class="deadline">{{# str }} deadline, theme_cbe {{/ str }}: {{ deadline }}</div>
+                </div>
+            </li>
+        {{/ pending_tasks }}
+        {{^ has_pending_tasks }}
+            <p>{{# str }} pending_tasks_not, theme_cbe {{/ str }}</p>
+        {{/has_pending_tasks}}
 
-</ul>
+    </ul>
+</div>
+
+{{#js}}
+
+    require(['theme_cbe/menuexpand'], function(menuexpand) {
+        menuexpand.initMenuExpand('[data-region="pending_tasks"]');
+    });
+
+{{/js}}
