--- a/templates/sections/course_left_section_themes_navigation_component.mustache
+++ b/templates/sections/course_left_section_themes_navigation_component.mustache
@@ -1,24 +1,34 @@
-{{# title }}
-<h3 class="title">{{ title }}</h3>
-{{/ title }}
-<div class="themes-navigation">
-    <a id="view_alls" href="{{ view_all }}">
-        <i class="fa fa-eye" aria-hidden="true"></i>
-        <span>{{# str }} course_navigation_view_all, theme_cbe {{/ str }}</span>
-    </a>
-    <ul class="themes">
-        {{# themes }}
-        <li class="theme {{# active }}active{{/ active }} {{# is_hidden }}is_hidden{{/ is_hidden }}">
-            <a href="{{ href }}">{{# shortentext }} 90, {{ name }} {{/ shortentext }}</a>
-        </li>
-        {{/ themes }}
-    </ul>
-    {{# is_teacher }}
-    <button id="create_theme" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target=".bd-createsection-modal-lg">
-        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-        <span>{{# str }} course_navigation_create_theme, theme_cbe {{/ str }}</span>
-    </button>
-    {{/ is_teacher }}
+<div id="course_left_section_themes_navigation" data-region="section_themes">
+    {{# title }}
+        <h3 class="title">
+            {{ title }}
+            <span class="expand-menu" data-action="expand">
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+            </span>
+            <span class="contract-menu" data-action="contract">
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+            </span>
+        </h3>
+    {{/ title }}
+    <div class="themes-navigation" data-region="expand">
+        <a id="view_alls" href="{{ view_all }}">
+            <i class="fa fa-eye" aria-hidden="true"></i>
+            <span>{{# str }} course_navigation_view_all, theme_cbe {{/ str }}</span>
+        </a>
+        <ul class="themes">
+            {{# themes }}
+                <li class="theme {{# active }}active{{/ active }} {{# is_hidden }}is_hidden{{/ is_hidden }}">
+                    <a href="{{ href }}">{{# shortentext }} 90, {{ name }} {{/ shortentext }}</a>
+                </li>
+            {{/ themes }}
+        </ul>
+        {{# is_teacher }}
+            <button id="create_theme" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target=".bd-createsection-modal-lg">
+                <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                <span>{{# str }} course_navigation_create_theme, theme_cbe {{/ str }}</span>
+            </button>
+        {{/ is_teacher }}
+    </div>
 </div>
 {{# is_teacher }}
 <div class="modal fade bd-createsection-modal-lg" tabindex="-1" role="dialog" aria-labelledby="createSectionModalLabel" aria-hidden="true">
@@ -67,4 +77,7 @@
             createsection.initCreatesection('[data-region="modal-create-section"]', {{ courseid }});
         });
     {{/ is_teacher }}
+    require(['theme_cbe/menuexpand'], function(menuexpand) {
+        menuexpand.initMenuExpand('[data-region="section_themes"]');
+    });
 {{/js}}
