fix responsive lg

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -6,6 +6,7 @@
 @import "base/form";
 @import "base/icons";
 @import "base/navs";
+@import "base/responsive";
 
 @import "components/modal";
 @import "components/coursecard";
