--- a/scss/components/_modtresipuntaudio.scss
+++ b/scss/components/_modtresipuntaudio.scss
@@ -13,7 +13,7 @@
     margin: 60px;
     border: 4px solid #929292;
     @media (max-width: 900px) {
-      margin: 0 !important;
+      margin: 0;
     }
 
     .mediaplugin {
