--- a/scss/components/_modtresipuntvideo.scss
+++ b/scss/components/_modtresipuntvideo.scss
@@ -17,7 +17,7 @@
     margin: 60px 60px 30px;
     border: 4px solid #929292;
     @media (max-width: 900px) {
-      margin: 0 !important;
+      margin: 0;
     }
     .mediaplugin {
       margin: 0;
