--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -27,6 +27,7 @@
 @import "layout/editionmode";
 @import "layout/fullheader";
 
+@import "pages/admin";
 @import "pages/login";
 @import "pages/dashboard";
 @import "pages/course";
