--- a/scss/pages/_board.scss
+++ b/scss/pages/_board.scss
@@ -224,7 +224,7 @@ body[data-theme='cbe'][data-role='user'] {
     color: white;
     margin-right: 20px;
     cursor: pointer;
-    background-color: $grey-medium;
+    background-color: $grey-medium2;
     width: 40px;
     height: 40px;
     border-radius: 20px;
