--- a/templates/pages/board_page.mustache
+++ b/templates/pages/board_page.mustache
@@ -67,7 +67,7 @@
     </div>
     {{/ is_teacher }}
     {{# modules }}
-        <div class="modulecbe {{ modname }} {{# is_hidden }}is_hidden{{/ is_hidden }} {{# board_is_anchor }}is_anchor{{/ board_is_anchor }}">
+        <div class="modulecbe {{ modname }} {{# is_hidden }}is_hidden{{/ is_hidden }} {{# board_is_anchor }}is_anchor{{/ board_is_anchor }} {{# board_is_hidden }}is_board_hidden{{/ board_is_hidden }}">
         {{# is_publication }}
             {{> theme_cbe/components/publication_board_component }}
         {{/ is_publication }}
