create logical board and issues

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -296,6 +296,9 @@ body[data-theme='cbe'][data-role="user"] {
           padding: 3px 12px;
           color: red;
         }
+        .selectcategory {
+          display: flex;
+        }
       }
     }
   }
