--- a/templates/components/module_media_component.mustache
+++ b/templates/components/module_media_component.mustache
@@ -8,6 +8,6 @@
         </button>
     </div>
     <div class="media-content" data-media="{{ id }}">
-        <h3>{{{ media }}}</h3>
+        <div class="media-resource">{{{ media }}}</div>
     </div>
 </div>
