--- a/templates/modals/dashboard_createcourse.mustache
+++ b/templates/modals/dashboard_createcourse.mustache
@@ -52,9 +52,9 @@
                             <div class="verify-input">
                                 <input type="text" class="form-control validation-input" id="shortname"  placeholder="Rellene el nombre corto del curso">
                                 <span id="verify-shortname" class="verify">
-                                <i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
-                            </span>
+                                    <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                                    <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                                </span>
                             </div>
                             <div class="alert-msg" data-msg="msg-shortname"></div>
                         </div>
@@ -66,11 +66,20 @@
                                 <i class="fa fa-question-circle" aria-hidden="true"></i>
                             </button>
                         </div>
-                        <select class="form-control validation-input" id="category">
-                            {{# create_course.categories }}
-                            <option value="{{ id }}">{{ name }}</option>
-                            {{/ create_course.categories }}
-                        </select>
+                        <div class="selectcategory">
+                            <select class="form-control validation-input" id="category">
+                                <option value=""></option>
+                                {{# create_course.categories }}
+                                    <option value="{{ id }}">{{ name }}</option>
+                                {{/ create_course.categories }}
+                            </select>
+                            <div class="verify-input">
+                                <span id="verify-category" class="verify">
+                                    <i class="fa fa-check-circle-o" aria-hidden="true"></i>
+                                    <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input validation-input" id="visible" checked>
